# cnc-iot-practica3

./: .env.example  .gitignore  COMANDOS.txt  Makefile  README.md  Vagrantfile  docker-compose.yml
Deploy/: .env.example  01_infraestructura.sh  02_backend.sh  03_frontend_hosting.sh  04_cleanup.sh  README.md  deploy.ps1  deploy.sh  down.ps1  fix-puerto.ps1  infra_outputs.env.template  recovery.ps1
Deploy/Segunda_Entrega/: deploy.ps1  deploy.sh  down.ps1  fase4.ps1  fase4.sh  provision-front.sh
Esp32/: credentials.h
Esp32/cnc_iot_esp32/: cnc_iot_esp32.ino  credentials.h  credentials.h.example
app/: alertas.py  config.py  csv_writer.py  main.py
app/models/: __init__.py  lectura.py
app/routers/: alertas.py  datos.py
app/schemas/: __init__.py  lectura.py
azure-functions/: requirements.txt
azure-functions/control_actuador/: __init__ .py  __init__.py  function.json
azure-functions/descargar_csv/: __init__.py  function.json
azure-functions/get_datos/: __init__.py  function.json
backend/: Dockerfile  cnc_backend.service  cnc_iot_esp32.ino  pyproject.toml  requirements.txt
backend/app/: alertas.py  config.py  csv_writer.py  database.py
backend/app/models/: lectura.py
backend/app/routers/: __init__.py  alertas.py  routers_datos.py
backend/app/schemas/: lectura.py
backend/data/: lecturas.csv
backend/tests/: test_datos.py
backend/tools/: sender.py  sender_UI.py
bridge/: mqtt_bridge.py  mqtt_bridge.service
frontend/: Dockerfile  app.js  index.html  next.config.ts  package-lock.json  package.json  style.css
tests/: test_datos.py
(+13 files in other folders)
